--- a/mainrep.tex
+++ b/mainrep.tex
@@ -76,9 +76,10 @@
 %% Department/Centre Name
 \dept{Department of Chemical Engineering}
 
-%% Supervisor and cosupervisor name can be put here
+%% Supervisor and cosupervisor/excosupervisor name can be put here
 \supervisor{Supervisor name}
 %\cosupervisor{Unknown name}
+%\excosupervisor{Unknown name}
 
 %% Roll number
 \rollnum{Roll No. ....}
@@ -93,7 +94,7 @@
 %*******************************************************************
 %                         Dedication Page                         
 %*******************************************************************
-\dedication[To my Parents]        
+\dedication[Dedicated to \ldots]        
 %\addintoc{Dedication}
 
 %*******************************************************************
