--- a/mainrep.tex
+++ b/mainrep.tex
@@ -1,4 +1,4 @@
-%%% Time-stamp: <2016-04-18 01:32:05, v1.3 sunthar>
+%%% Time-stamp: <mainrep.tex 19:57, 17 Jul 2016 by P Sunthar>
 %%% $Log:$
 % This document describes how to use iitbreport style
 %********************************************************************
@@ -78,8 +78,8 @@
 
 %% Supervisor and cosupervisor/excosupervisor name can be put here
 \supervisor{Supervisor name}
-%\cosupervisor{Unknown name}
-%\excosupervisor{Unknown name}
+%\cosupervisor{Co-super name}
+%\excosupervisor{External Supervisor}
 
 %% Roll number
 \rollnum{Roll No. ....}
