make supervisor optional

--- a/mainrep.tex
+++ b/mainrep.tex
@@ -76,8 +76,11 @@
 %% Department/Centre Name
 \dept{Department of Chemical Engineering}
 
-%% Supervisor and cosupervisor/excosupervisor name can be put here
-\supervisor{Supervisor name}
+%% Supervisor and cosupervisor/excosupervisor are not essential parts
+%% of a report title page, as it is your report!
+
+%% But if you **have** to put it uncomment these
+%\supervisor{Supervisor name}
 %\cosupervisor{Co-super name}
 %\excosupervisor{External Supervisor}
 
