--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -119,7 +119,7 @@ a mathematical equation as $\etas = \eta \, ( 1 + \phi)$.
 \item \verb|\nmS[g]{$g$}{Gas phase}|
 \item \verb|\nms[i]{$i$}{Indices}|
 \item \verb|\nms[x]{$x$}{Variable in x-direction}|
-\item \verb|\nmX[f]{foo}{foo|
+\item \verb|\nmX[f]{foo}{foo}|
 \end{enumerate} 
 
 \nmA[FF]{FFA}{Free fatty acid}
