--- a/intro/introduction.tex
+++ b/intro/introduction.tex
@@ -118,7 +118,7 @@ a mathematical equation as $\etas = \eta \, ( 1 + \phi)$.
 \item \verb|\nmS[v]{$v$}{Vapor phase}|
 \item \verb|\nmS[g]{$g$}{Gas phase}|
 \item \verb|\nms[i]{$i$}{Indices}|
-\item \verb|\nms[x]{$x$}{Variable in x-direction}|
+\item \verb|\nms[x]{$x$}{Variable in $x$-direction}|
 \item \verb|\nmX[f]{foo}{foo}|
 \end{enumerate} 
 
@@ -141,7 +141,7 @@ a mathematical equation as $\etas = \eta \, ( 1 + \phi)$.
 
 
 \nms[i]{$i$}{Indices}
-\nms[x]{$x$}{Variable in x-direction}
+\nms[x]{$x$}{Variable in $x$-direction}
 
 
 \nmX[f]{foo}{foo}
